[package]
name = "lspire"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "lspire"
path = "src/lib.rs"

[package.metadata.android]
package = "com.lspire.game"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
min_sdk_version = 31
target_sdk_version = 34
max_sdk_version = 34

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[dependencies]
bevy = "0.15"
bevy_rapier3d = "0.29"
noise = "0.9"
rodio = "0.19"
rand = "0.8"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
local-ip-address = "0.6"
